syntax = "proto3";

import "protos/productmessages.proto";

option csharp_namespace="ProductsProtoLibrary.Grpc";

package ProductsProtoLibrary;



service ProductService {
  rpc UnaryProductListing(FilterCriteriaInput) returns (ProductsProtoLibrary.ProductList);
  rpc UnaryGetProductDetails(ProductsProtoLibrary.DetailsInput) returns (ProductsProtoLibrary.Product) ;
  rpc GetProductListSS(ProductsProtoLibrary.LotSize) returns(stream ProductsProtoLibrary.ProductList);
  rpc GetProductListCS(stream ProductsProtoLibrary.FilterCriteriaInput) returns (ProductsProtoLibrary.ProductList);
  rpc GetProductsBoth(stream ProductsProtoLibrary.FilterCriteriaInput) returns (stream ProductsProtoLibrary.ProductList);

};
