syntax="proto3";

option csharp_namespace="ProductsProtoLibrary.Grpc";

package ProductsProtoLibrary;

message FilterCriteriaInput { 
    string criteria=1;
}
message DetailsInput{
    int32 product_id=1;
}
message LotSize { 
    int32 rows_per_page=1;
}

message Product {
    int32 product_id=1;
    string product_name=2;
    DecimalValue unit_price=3;
    int32 units_in_stock=4;
    bool discontinued=5;
}
message ProductList {
    repeated Product products=1;
}

message DecimalValue {
	int64 units=1;
	int32 nanos=2;
}

